src/objects/P7S1_Liferay_ConfigSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>P7S1_AdfactoryAdminEmail__c</fullName>
        <description>Email address where activation reminder is send</description>
        <label>Adfactory Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>P7S1_AdfactoryDefaultNewsletter__c</fullName>
        <label>Adfactory Default Newsletter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LiferayAdminEmail__c</fullName>
        <label>Liferay Admin Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LiferayDefaultNewsletter__c</fullName>
        <label>LiferayDefaultNewsletter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LiferayRestApiHost__c</fullName>
        <description>Host URL from the Liferay jasonws api</description>
        <label>Liferay Rest Api Hostname</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_LiferayRestApiPassword__c</fullName>
        <label>Liferay Rest Api Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_LiferayRestApiUsername__c</fullName>
        <label>Liferay Rest Api Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter_Unsubscribe_Success_Url__c</fullName>
        <defaultValue>&quot;http://www.sevenone-adfactory.de/newsletter/abmeldebestaetigung/&quot;</defaultValue>
        <label>Adfactory NL Unsubscribe Success Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>P7S1_Newsletter_Unsubscribe_Url__c</fullName>
        <label>Adfactory Newsletter Unsubscribe Url</label>
        <type>Url</type>
    </fields>
    <label>P7S1 Liferay Config Settings</label>
</CustomObject>